# MLOPS-Telco-Customer-Churn-Prediction

./: .gitignore  .pre-commit-config.yaml  GUIA_BEST_PRACTICES.md  Makefile  README.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
api/: api.py  schema.py
db/: init.sql
docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.prefect  docker-compose.yml
infraestructure/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
src/: config.py  data_loader.py  evaluation.py  model_registry.py  monitor.py  preprocessing.py  train.py  validation.py
tests/: conftest.py  test_api.py  test_evaluation.py  test_monitor.py  test_preprocessing.py
